<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.attendance_v10.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.example.attendance_v10.ui.Attendance.AttendanceFragment"
        android:label="@string/attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/nav_tour"
        android:name="com.example.attendance_v10.ui.Tour.TourFragment"
        android:label="@string/tour"
        tools:layout="@layout/fragment_tour" />

    <fragment
    android:id="@+id/nav_logout"
    android:name="com.example.attendance_v10.ui.Logout.LogoutFragment"
    android:label="@string/logout"
    tools:layout="@layout/fragment_logout" />
</navigation>